Database and table fields are populating

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				  	<div class="panel-heading">
 				  		<h3 class="panel-title">Current Train Schedule</h3>
 					</div>
-								<table class="table">
+							<table id="train-table" class="table">
+								<thead>
 									<tr>
 										<th>Train Name</th>
 										<th>Destination</th>
@@ -28,17 +29,10 @@
 										<th>Next Arrival</th>
 										<th>Minutes Away</th>
 									</tr>
-								</table>
-
-								<table class="table">
-									<tr>
-										<td id=train-display></td>
-										<td id=dest-display></td>
-										<td id=freq-display></td>
-										<td id=arrival-display></td>
-										<td id=min-away-display></td>
-									</tr>
-								</table>
+								</thead>
+									<tbody>
+									</tbody>
+							</table>
 				  
 				</div>
 
