--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 	<div class="container">
 		<div class="jumbotron big-style">
-		  <h1>Train Scheduler</h1>
-		  <p>You're source for train arrival and departure times.</p>
+		  <h1><strong>Train Scheduler</strong></h1>
+		  <h3><strong>You're source for train arrival and departure times.</strong></h3>
 		</div>
 
 		<div class="row">
@@ -20,19 +20,21 @@
 				  	<div class="panel-heading">
 				  		<h3 class="panel-title">Current Train Schedule</h3>
 					</div>
-							<table id="train-table" class="table">
-								<thead>
-									<tr>
-										<th>Train Name</th>
-										<th>Destination</th>
-										<th>Frequency (min)</th>
-										<th>Next Arrival</th>
-										<th>Minutes Away</th>
-									</tr>
-								</thead>
-									<tbody>
-									</tbody>
-							</table>
+
+					<table id="train-table" class="table">
+						<thead>
+							<tr>
+								<th>Train Name</th>
+								<th>Destination</th>
+								<th>Frequency (min)</th>
+								<th>Next Arrival</th>
+								<th>Minutes Away</th>
+							</tr>
+						</thead>
+							<tbody>
+
+							</tbody>
+					</table>
 				  
 				</div>
 
@@ -41,43 +43,52 @@
 		</div>
 
 
-    <div class="row">
+    	<div class="row">
 
-      <!-- Sign-Up Panel-->
-      <div class="col-md-12">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Add Train</h3>
-          </div>
-          <div class="panel-body">
+	      	<!-- Sign-Up Panel-->
+	      	<div class="col-md-12">
+	        	<div class="panel panel-primary">
+	          		<div class="panel-heading">
+	            		<h3 class="panel-title">Add Train</h3>
+	          		</div>
+	          		<div class="panel-body">
 
-            <!-- Sign-up Form (note the various input "types")-->
+			            <!-- Sign-up Form (note the various input "types")-->
 
-            <form role="form">
-              <div class="form-group">
-                <label for="train-input">Train Name</label>
-                <input class="form-control" id="train-input" type="text">
-              </div>
-              <div class="form-group">
-                <label for="dest-input">Destination</label>
-                <input class="form-control" id="dest-input" type="text">
-              </div>
-              <div class="form-group">
-                <label for="time-input">First Train Time (HH:mm - military time)</label>
-                <input class="form-control" id="time-input" type="number">
-              </div>
-              <div class="form-group">
-                <label for="freq-input">Frequency</label>
-                <input class="form-control" id="freq-input" type="number"></input>
-              </div>
-              <button class="btn btn-primary" id="add-train" type="submit">Submit</button>
-            </form>
+			            <form role="form">
+			              	<div class="form-group">
+			                	<label for="train-input">Train Name</label>
+			                	<input class="form-control" id="train-input" type="text">
+			              	</div>
 
-          </div>
+			              	<div class="form-group">
+			                	<label for="dest-input">Destination</label>
+			                	<input class="form-control" id="dest-input" type="text">
+			              	</div>
 
-        </div>
+			              	<div class="form-group">
+			                	<label for="time-input">First Train Time (HH:mm - military time)</label>
+			                	<input class="form-control" id="time-input" type="time">
+			              	</div>
 
-      </div>
+			              	<div class="form-group">
+			                	<label for="freq-input">Frequency</label>
+			                	<input class="form-control" id="freq-input" type="text"></input>
+			              	</div>
+
+			              	<button class="btn btn-primary" id="add-train" type="submit">Submit</button>
+
+			            </form>
+
+	        		</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
 
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
